Add Processor for Intent data

--- a/config.ini
+++ b/config.ini
@@ -24,6 +24,6 @@ vocab_size = 32000
 
 [FINETUNING-DATA]
 FILEURL = https://www.rondhuit.com/download/ldcc-20140209.tar.gz
-FILEPATH = /work/data/ldcc-20140209.tar.gz
-DATADIR = /work/data/
-TEXTDIR = /work/data/livedoor/
+FILEPATH = /Users/minhpqn/workspace/data/ldcc-20140209.tar.gz
+DATADIR = /Users/minhpqn/workspace/data/
+TEXTDIR = /Users/minhpqn/workspace/data/livedoor/
